[workspace]

members = [
    "apiary-main",
    "apiary",
    "apiary-assets"
]

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2

#[patch.crates-io]
[patch.crates-io]
distill = { git = "https://github.com/aclysma/distill.git", rev = "4da6b5bacff88f86ec9f80736d4113cf057512e5" }