[workspace]

members = [
    "apiary-main",
    "apiary",
    "apiary-assets"
]

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2

#[patch.crates-io]
[patch.crates-io]
distill = { git = "https://github.com/aclysma/distill.git", rev = "9e127ca9d034e0c7dffb747f8aae3a2607b0e1e8" }