[package]
name = "apiary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rafx-api = { version = "0.0.14", features = ["rafx-vulkan"] }
rafx-framework = { version = "0.0.14", features = ["rafx-vulkan"] }
rafx-assets = { version = "0.0.14" }
rafx-renderer = { version = "0.0.14" }
rafx-plugins = { version = "0.0.14" , features=["legion"]}
winit = "0.24"
profiling = "1.0"
profiling-procmacros = "1.0.4"
log = "0.4"
rayon = "1.5"
#apiary-assets  = {path = "../apiary-assets"}
legion = "0.4"
structopt = "0.3"
stats_alloc = { version = "0.1.8", optional = true }
bevy_tasks = "0.5"
egui = { version = "0.12", features = ["default_fonts"], optional = true }

[features]
default = [
    "profile-with-puffin",
    "use-egui"
]

use-egui = ["egui", "egui-winit", "rafx-plugins/egui-winit"]

profile-with-optick = [
    "profiling/profile-with-optick"
]

profile-with-tracy = ["profiling/profile-with-tracy"]
profile-with-tracy-memory = [
    "profiling/profile-with-tracy",
    "profile-with-tracy"
]
profile-with-puffin = [
    "profiling/profile-with-puffin"
]

egui-winit = []